[package]
name = "nekolker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clearscreen = "3.0.0"
colored = "2.1.0"
zip = "1.1.3"

[profile.dev]
opt-level = 3             # Use slightly better optimizations.
overflow-checks = true
